# mod-art

./: .gitignore  ART_theory.md  LICENSE  README.md  compress_large_files.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
example environments/AudioForGames_20_patches/: ART_kernel_band_1.mtx  ART_kernel_band_2.mtx  ART_kernel_band_3.mtx  ART_kernel_band_4.mtx  ART_kernel_band_5.mtx  ART_kernel_band_6.mtx  ART_kernel_band_7.mtx  ART_kernel_band_8.mtx  MoD-ART extra.csv  MoD-ART.csv
example environments/AudioForGames_30_patches/: ART_kernel_band_1.mtx  ART_kernel_band_2.mtx  ART_kernel_band_3.mtx  ART_kernel_band_4.mtx  ART_kernel_band_5.mtx  ART_kernel_band_6.mtx  ART_kernel_band_7.mtx  ART_kernel_band_8.mtx  MoD-ART extra.csv  MoD-ART.csv
example environments/AudioForGames_54_patches/: ART_kernel_band_1.mtx  ART_kernel_band_2.mtx  ART_kernel_band_3.mtx  ART_kernel_band_4.mtx  ART_kernel_band_5.mtx  ART_kernel_band_6.mtx  ART_kernel_band_7.mtx  ART_kernel_band_8.mtx  MoD-ART.csv
example environments/DampenedMiddle_112_patches/: ART_kernel_specular.mtx
example environments/DampenedMiddle_20_patches/: ART_kernel_band_1.mtx  ART_kernel_band_2.mtx  ART_kernel_band_3.mtx  ART_kernel_band_4.mtx  ART_kernel_band_5.mtx  ART_kernel_band_6.mtx  ART_kernel_band_7.mtx  ART_kernel_band_8.mtx  ART_kernel_diffuse.mtx  ART_kernel_specular.mtx  MoD-ART extra.csv  MoD-ART.csv  path_delays.csv  path_etendues.csv  path_lengths.csv
example environments/DampenedMiddle_30_patches/: MoD-ART extra.csv  (+11 more)
example usage/: Tutorial.ipynb  echogram_comparison.py  residue_heatmap.py  response_noiseshaping.py
raves/: __init__.py  __main__.py  api.py  cli.py
(+125 files in other folders)
